# symmetrical-octo-spork

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PROJECT_BREAKDOWN.md  PROJECT_STATUS.md  README.md  build.md  build.sh  prd.txt  release.sh  setup_dev.sh
.docker/: Dockerfile.build-env
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-build-env/: action.yaml  action.yml
.github/workflows/: build-deploy.yml  ci-cd.yml  ci.yml  docker.yml  performance.yml  release.yml  security.yml
core/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
core-cpp/: CMakeLists.txt  conanfile.txt
core/demo/: image_processing_demo.cpp
core/include/: octoedit_core.h
core/include/bettergimp/: core.hpp
core/include/bettergimp/image/: brush_engine.hpp  image.hpp  image_exporter.hpp  image_importer.hpp  image_processor.hpp
core/src/: core.cpp
core/src/image/: brush_engine.cpp  image.cpp  image_exporter.cpp  image_importer.cpp  image_processor.cpp
core/tests/: test_core.cpp  test_image_advanced.cpp  test_main.cpp
core/tests/image/: test_image.cpp
database/schemas/: octoedit.sql
python/: requirements.txt
python/api/: __init__.py
scripts/: build.sh  deploy-config.json  deploy.sh  setup-dev.sh
server/: README.md  main.py  requirements.txt  start.sh
server/data/: bettergimp.db
server/src/api/: filters.py  health.py  images.py  projects.py  router.py
server/src/models/: database.py  image.py  project.py
server/src/services/: core_service.py  image_service.py  project_service.py
ui/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: BrushSelector.tsx  Canvas.tsx  CanvasToolbar.tsx  DropZone.tsx  EditDropdown.tsx  ElectronWrapper.tsx  ErrorMessage.tsx  FileExplorer.tsx  LayerPanel.tsx  LoadingScreen.tsx  ProjectManager.tsx  PropertiesPanel.tsx  ResizablePanel.tsx  Sidebar.tsx  StatusBar.tsx  ToolsSidebar.tsx
ui/src/hooks/: useAutoSave.ts  useElectronAPI.ts  useMenuActions.ts
ui/src/services/: projectService.ts
ui/src/store/: app.ts  canvas.ts
ui/src/types/: index.ts
ui/src/utils/: brushCache.ts  brushRenderer.ts  index.ts
